page 2 alignment fixes

--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -68,7 +68,7 @@ label[for=lead_plant_id_10] {
   border-style: solid;
 }
 .simple_form {
-  margin-left:4%;
+  margin-left:-3%;
 }
 ._small {
   margin-left:-4%;
@@ -262,4 +262,7 @@ width: 10%;
   margin-left:26%;
    text-shadow: 2px 2px #D3D3D3;
    font-weight: bold;
+ }
+ .btn-position {
+  margin-right:-12%;
  }
